--- a/Biblioteka_Online/Projekt_biblioteka/książki/templates/książki/book_list.html
+++ b/Biblioteka_Online/Projekt_biblioteka/książki/templates/książki/book_list.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Book Library</h1>
     <ul>
-        {% for book in books %}
+        {% for book in książki %}
             <li>{{ book.title }} by {{ book.author }} - {{ book.genre }} (Published: {{ book.published_date }}) <a href="{% url 'delete_book' book.id %}">Delete</a></li>
         {% endfor %}
     </ul>
