--- a/BooksLibrary/BOOKS/templates/BOOKS/index.html
+++ b/BooksLibrary/BOOKS/templates/BOOKS/index.html
@@ -1,2 +1,38 @@
 <h1>Biblioteka On-Line</h1>
 <p>{{ komunikat }}</p>
+
+<ul>
+  {% if not user.is_authenticated %}
+    <li><a href="{% url 'login' %}">Zaloguj się</a></li>
+    <li><a href="{% url 'register' %}">Utwórz konto</a></li>
+  {% else %}
+    <li><a href="{% url 'logout' %}">Wyloguj się</a></li>
+  {% endif %}
+</ul>
+
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Twoja aplikacja</title>
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                {% if user.is_authenticated %}
+                    <li>
+                        <form method="post" action="{% url 'logout' %}">
+                            {% csrf_token %}
+                            <button type="submit">Wyloguj się</button>
+                        </form>
+                    </li>
+                {% else %}
+                    <li><a href="{% url 'login' %}">Zaloguj się</a></li>
+                    <li><a href="{% url 'register' %}">Utwórz konto</a></li>
+                {% endif %}
+            </ul>
+        </nav>
+    </header>
+    <!-- Zawartość strony -->
+</body>
+</html>
