Poprawki do bazdy danych i wdrożenie listy książek

--- a/BooksLibrary/BOOKS/templates/BOOKS/index.html
+++ b/BooksLibrary/BOOKS/templates/BOOKS/index.html
@@ -6,42 +6,40 @@
     <title>Witaj w Bibliotece On-line!</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
             margin: 0;
             padding: 0;
             display: flex;
             flex-direction: column;
-            justify-content: center;
             align-items: center;
+            justify-content: center;
             height: 100vh;
             color: #333;
         }
-        .container {
+        header {
+            background-color: #333;
+            color: #fff;
+            width: 100%;
+            padding: 1rem;
             text-align: center;
-            background-color: #fff;
-            padding: 40px;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
         }
-        h1 {
-            margin-bottom: 20px;
-            font-size: 2.5em;
-            color: #444;
+        main {
+            padding: 2rem;
         }
-        .btn-container {
-            margin-top: 20px;
+        a {
+            text-decoration: none;
+            color: #007BFF;
+            margin: 0 1rem;
         }
         .btn {
-            margin: 5px;
-            padding: 10px 20px;
-            font-size: 1em;
-            color: #fff;
-            background-color: #007bff;
+            padding: 0.5rem 1rem;
             border: none;
+            background-color: #007BFF;
+            color: #fff;
             border-radius: 5px;
             cursor: pointer;
-            text-decoration: none;
+            margin: 0.5rem;
         }
         .btn:hover {
             background-color: #0056b3;
@@ -49,13 +47,21 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <header>
         <h1>Witaj w Bibliotece On-line!</h1>
-        <p>Zapraszamy do korzystania z naszej wirtualnej biblioteki.</p>
-        <div class="btn-container">
+    </header>
+    <main>
+        {% if user.is_authenticated %}
+            <p>Witaj, {{ user.username }}!</p>
+            <a href="{% url 'BOOKS:book_list' %}" class="btn">Moje Książki</a>
+            <form method="post" action="{% url 'logout' %}">
+                {% csrf_token %}
+                <button type="submit" class="btn">Wyloguj się</button>
+            </form>
+        {% else %}
             <a href="{% url 'BOOKS:login' %}" class="btn">Zaloguj się</a>
-            <a href="{% url 'BOOKS:register' %}" class="btn">Zarejestruj się</a>
-        </div>
-    </div>
+            <a href="{% url 'BOOKS:register' %}" class="btn">Utwórz konto</a>
+        {% endif %}
+    </main>
 </body>
 </html>
